Add password validation
