# internal/transport/http/docs/swagger.json
@@ -15,7 +15,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/accounts": {
+        "/users": {
             "put": {
                 "description": "update by json user",
                 "consumes": [
@@ -81,7 +81,7 @@
                 "parameters": [
                     {
                         "description": "Create user",
-                        "name": "account",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -155,9 +155,9 @@
                 }
             }
         },
-        "/users": {
+        "/users/": {
             "get": {
-                "description": "Get all user accounts",
+                "description": "Get all users",
                 "produces": [
                     "application/json"
                 ],
@@ -344,35 +344,6 @@
         }
     },
     "definitions": {
-        "http.Award": {
-            "type": "object",
-            "properties": {
-                "awardDescription": {
-                    "type": "string"
-                },
-                "awardLevel": {
-                    "type": "integer"
-                },
-                "awardName": {
-                    "type": "string"
-                },
-                "awardScore": {
-                    "type": "integer"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "userID": {
-                    "type": "integer"
-                }
-            }
-        },
         "http.HttpError": {
             "type": "object",
             "properties": {
@@ -387,35 +358,9 @@
                 }
             }
         },
-        "http.Interest": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "interest": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "userID": {
-                    "type": "integer"
-                }
-            }
-        },
         "http.User": {
             "type": "object",
             "properties": {
-                "awards": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/http.Award"
-                    }
-                },
                 "bio": {
                     "type": "string",
                     "format": "string",
@@ -440,12 +385,6 @@
                     "type": "integer",
                     "format": "int64",
                     "example": 1
-                },
-                "interests": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/http.Interest"
-                    }
                 },
                 "linkedIn": {
                     "type": "string",
